# imks

./: .gitignore  .mailmap  MANIFEST.in  README.rst  imks_standalone.py  requirements.txt  run_imks.py  setup-old.py  setup.cfg  setup.py
imks/: .gitignore  __init__.py  _version.py  calendars.py  completers.py  config.py  constants.py  currencies.py  dbpedia.py  doc.py  freebase.py  geolocation.py  imks-old.py  imks.py  imks2.py  imks_ios.py  imks_standalone.py  jpl.py  lazy.py  magics.py  pycalcal.py  shell.py  spelling.py  test.py  test_shell.py  test_units.py  transformers.py  units-old.py  units.py  units_fpmath.py  units_math.py  units_mcerp.py  units_mpmath.py  units_numpy.py  units_soerp.py  units_umath.py  uparse.py  wiki.py  wolfram.py  wrapper.py  (+1 more)
imks/scripts/: Astro.imks  Startup.imks
old/: imks-old.py  ipy_dkc.py
