[metadata]
name = imks
author = Marco Lombardi
author-email = marco.lombardi@gmail.com
summary = An ipython extension to make advanced computations with units
description-file = README.rst
home-page = https://github.com/astrozot/imks
requires-python = >=2.5
license = MIT
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: IPython
    Topic :: Scientific/Engineering :: Physics
keywords =
    units
    physics
    calculator

[files]
packages =
    imks
data_files =
    share/imks = imks/scripts/*.imks

[extras]
mpmath =
    mpmath
uncertainties =
    uncertainties
soerp =
    soerp
mcerp =
    mcerp

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1